; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_emu8000_callback.c_set_pitch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_emu8000_callback.c_set_pitch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_emu8000 = type { i32 }
%struct.snd_emux_voice = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_emu8000*, %struct.snd_emux_voice*)* @set_pitch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_pitch(%struct.snd_emu8000* %0, %struct.snd_emux_voice* %1) #0 {
  %3 = alloca %struct.snd_emu8000*, align 8
  %4 = alloca %struct.snd_emux_voice*, align 8
  store %struct.snd_emu8000* %0, %struct.snd_emu8000** %3, align 8
  store %struct.snd_emux_voice* %1, %struct.snd_emux_voice** %4, align 8
  %5 = load %struct.snd_emu8000*, %struct.snd_emu8000** %3, align 8
  %6 = load %struct.snd_emux_voice*, %struct.snd_emux_voice** %4, align 8
  %7 = getelementptr inbounds %struct.snd_emux_voice, %struct.snd_emux_voice* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.snd_emux_voice*, %struct.snd_emux_voice** %4, align 8
  %10 = getelementptr inbounds %struct.snd_emux_voice, %struct.snd_emux_voice* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @EMU8000_IP_WRITE(%struct.snd_emu8000* %5, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @EMU8000_IP_WRITE(%struct.snd_emu8000*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
